Revision history for Mojolicious-Plugin-AssetPack

0.44
       * Will look for existing assets even with MOJO_ASSETPACK_DEBUG=1

0.43     Fri Mar 20 11:27:22 2015
       * Same CSS::Sass detection for Sass as for Scss preprocessor

0.42     Mon Mar 16 19:31:36 2015
       * Fix "Unescaped left brace in regex is deprecated" warnings

0.41     Mon Mar 16 13:47:17 2015
       * Will die on CSS::Sass errors

0.40     Mon Mar 16 11:04:47 2015
       * Fix reading sass files from SASS_PATH, when using CSS::Sass

0.39     Fri Mar  6 17:06:19 2015
       * Will default to CSS::Sass if installed
       * Reversed production/development logic
       * Fix spelling in documentation (berov)

0.3801   Mon Mar  2 23:58:21 2015
       * Removed reference to "expand" #38

0.38     Mon Mar  2 23:55:36 2015
       * Improved documentation.
       * Less logging

0.37     Wed Feb  4 16:59:36 2015
       * Will use CSS::Sass if ENABLE_LIBSASS_BINDINGS=1 is set
         This is candiate to become the default in later releases

0.36     Fri Jan 30 12:08:51 2015
       * Require JavaScript::Minifier::XS 0.11 which include many bugfixes,
         such as:
         JavaScript::Minifier::XS::minify(q|function(s){return /^\s*[\w-"']+ *:/.test(s)}|);

0.35     Thu Jan 29 21:20:25 2015
       * Include original error message when failing to fallback
       * Will die() instead of return $err on process()
       * Improved detection of minified JavaScript code #34

0.34     Fri Jan 23 12:51:25 2015
       * Add preprocessor() method to AssetPack
       * Add support for assets from __DATA__

0.33     Tue Jan  6 20:00:42 2015
       * Can fallback to existing assets in production mode

0.32     Thu Dec 18 12:23:58 2014
       * Add logging of JavaScript code to console on error
       * Able to pass on attrs to script/link tag generator #33

0.31     Thu Oct  9 13:19:44 2014
       * Fixed and wrote tests for external AssetPack plugins

0.30     Wed Oct  8 21:55:37 2014