@@ -1,23 +1,21 @@
 use t::Helper;
 
 {
-  diag "minify=0";
   my $t = t::Helper->t({minify => 0});
 
-  plan skip_all => 'Could not find preprocessors for jsx', 6 unless $t->app->asset->preprocessors->can_process('jsx');
+  plan skip_all => 'Could not find preprocessors for jsx' unless $t->app->asset->preprocessors->can_process('jsx');
 
-  $t->app->asset('jsx.js' => '/js/c.jsx');
+  $t->app->asset('jsx.js'   => '/js/c.jsx');
+  $t->app->asset('error.js' => '/js/error.jsx');
+
   $t->get_ok('/test1')->status_is(200)->content_like(qr{;[\n\s]+React})
     ->content_like(qr{var app\s*=\s*React\..*div.*{.*"appClass"},\s*"Hello, React!"\)});
 
-  $t->app->asset('error.js' => '/js/error.jsx');
-  $t->get_ok('/test1')->status_is(200)->content_like(qr{alert\('Failed to run})->content_like(qr{console\.log\(\{})
-    ->content_like(qr{\s\(src=.*error\.jsx\)"})->content_like(qr{console\.log.*"err":"Failed to run})
-    ->content_like(qr{console\.log.*"code":\["React\.renderComponent});
+  $t->get_ok('/test1')->status_is(200)->content_like(qr{alert\('.*Failed to run})
+    ->content_like(qr{console\.log\('.*Failed to run});
 }
 
 {
-  diag "minify=1";
   my $t = t::Helper->t({minify => 1});
 
   $t->app->asset('jsx.js' => '/js/c.jsx');
