@@ -1,65 +1,49 @@
 BEGIN { $ENV{MOJO_ASSETPACK_NO_CACHE} = 1 }
 use t::Helper;
+use Mojo::Util 'spurt';
 
-my $i;
-
-{
-  my $t = add_preprocessor(t::Helper->t({minify => 0}));
-  my @files;
-
-  $i = 42;
-  $t->get_ok('/test1');
-  push @files, $t->tx->res->dom->at('script')->{src};
-  $t->get_ok($files[-1])->status_is(200)->content_like(qr{var i = 42;}, 'var i = 40');
-
-  $i = 60;
-  $t->get_ok('/test1');
-  push @files, $t->tx->res->dom->at('script')->{src};
-  $t->get_ok($files[-1])->status_is(200)->content_like(qr{var i = 60;}, 'var i = 61');
-
-  for my $file (@files) {
-    is $file, $files[0], "$file = $files[0]";
-  }
-}
+my $file;
 
 {
-  my $t = add_preprocessor(t::Helper->t({minify => 1}));
+  my $t = t::Helper->t({minify => 0});
   my @files;
 
-  $i = 40;
-  $t->get_ok('/test1');
-  push @files, $t->tx->res->dom->at('script')->{src};
-  $t->get_ok($files[-1])->status_is(200)->content_like(qr{var i = 40; // minified}, 'var i = 40');
+  $file = File::Spec->catfile($t->app->static->paths->[0], 'css', 'no-cache.css');
 
-  $i = 61;
-  $t->get_ok('/test1');
-  push @files, $t->tx->res->dom->at('script')->{src};
-  $t->get_ok($files[-1])->status_is(200)->content_like(qr{var i = 61; // minified}, 'var i = 61');
+  $t->app->asset('no-cache.css' => '/css/no-cache.css', '/css/b.css');
 
-  for my $file (@files) {
-    is $file, $files[0], "$file = $files[0]";
-  }
+  spurt('body { color: #424242; }', $file);
+  $t->get_ok('/test1');
+  push @files, $t->tx->res->dom->at('link')->{href};
+  $t->get_ok($files[-1])->status_is(200)->content_like(qr{\#424242});
+
+  spurt('body { color: #606060; }', $file);
+  $t->get_ok('/test1');
+  push @files, $t->tx->res->dom->at('link')->{href};
+  $t->get_ok($files[-1])->status_is(200)->content_like(qr{\#606060});
 }
 
-sub add_preprocessor {
-  my $t = shift;
+{
+  my $t = t::Helper->t({minify => 1});
+  my @files;
 
-  $t->app->asset->preprocessors->remove('coffee');
-  $t->app->asset->preprocessors->add(
-    coffee => sub {
-      my ($assetpack, $text, $file) = @_;
-      $$text = "var i = $i;";
-      $$text .= " // minified" if $assetpack->minify;
-    }
-  );
+  $t->app->asset('no-cache.css' => '/css/no-cache.css', '/css/b.css');
 
-  $t->app->asset('app.js' => '/js/c.coffee');
+  spurt('body { color: #242424; }', $file);
+  $t->get_ok('/test1');
+  push @files, $t->tx->res->dom->at('link')->{href};
+  $t->get_ok($files[-1])->status_is(200)->content_like(qr{\#242424});
 
-  $t;
+  spurt('body { color: #616161; }', $file);
+  $t->get_ok('/test1');
+  push @files, $t->tx->res->dom->at('link')->{href};
+  $t->get_ok($files[-1])->status_is(200)->content_like(qr{\#616161});
 }
+
+END { unlink $file }
 
 done_testing;
 
 __DATA__
 @@ test1.html.ep
-%= asset 'app.js'
+%= asset 'no-cache.css'
