@@ -19,7 +19,7 @@ my $cdn_base_url = 'http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0';
 }
 
 {
-  $t->get_ok('/test1')->status_is(200)->content_like(qr{href="/packed/font-awesome-\w+\.css".*}m);
+  $t->get_ok('/test1')->status_is(200)->content_like(qr{href="/packed/font-awesome-\w+\.css"}m);
   $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)
     ->content_like(qr{url\('$cdn_base_url/fonts/fontawesome-webfont\.eot\?v=4\.1\.0'\);},                    'eot')
     ->content_like(qr{url\('$cdn_base_url/fonts/fontawesome-webfont\.eot\?\#iefix&v=4\.1\.0'\)},             'iefix')
