@@ -7,7 +7,7 @@ plan skip_all => 'TEST_ONLINE=1 required' unless $ENV{TEST_ONLINE};
 
   $t->app->asset('app.css' => 'http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic');
 
-  $t->get_ok('/test1')->status_is(200)->content_like(qr{href="/packed/app-\w+\.css"}m);
+  $t->get_ok('/test1')->status_is(200)->content_like(qr{href="/packed/app-\w+\.min\.css"}m);
   $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)->content_like(qr{\@font-face.*http://font}s);
 
   ok -s 't/public/packed/http___fonts_googleapis_com_css_family_Lora_400_700_400italic_700italic.css', 'cached font';
