@@ -1,7 +1,6 @@
 use t::Helper;
 
 {
-  diag "minify=0";
   my $t = t::Helper->t({minify => 0});
 
   plan skip_all => 'Could not find preprocessors for scss' unless $t->app->asset->preprocessors->can_process('scss');
@@ -23,18 +22,17 @@ use t::Helper;
 
   $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)->content_like(qr{background: \#abcdef});
 
-  $t->get_ok('/include-dir')->content_like(qr{<link href="/packed/y-47cfc3af7162086fe15b5b8d1623f8c9\.css".*}m)
+  $t->get_ok('/include-dir')->content_like(qr{<link href="/packed/y-47cfc3af7162086fe15b5b8d1623f8c9\.css"}m)
     ->status_is(200);
 }
 
 {
-  diag "minify=1";
   my $t = t::Helper->t({minify => 1});
 
   $t->app->asset('scss.css' => '/css/a.scss', '/css/b.scss');
 
   $t->get_ok('/test1')->status_is(200)
-    ->content_like(qr{<link href="/packed/scss-53f756a54b650d23d1ddb705c10c97d6\.css".*}m);
+    ->content_like(qr{<link href="/packed/scss-53f756a54b650d23d1ddb705c10c97d6\.min\.css"}m);
 
   $t->get_ok($t->tx->res->dom->at('link')->{href})->status_is(200)->content_like(qr{a1a1a1.*b1b1b1}s);
 }
